# structsense

./: .autorc  .gitignore  MANIFEST.in  README.md  __init__.py  docker-compose.yml  pyproject.toml  run.sh  setup.py
config/: agents.yaml  config.yaml  dynamic_agent.yaml  dynamic_task.yaml  embedding.yaml  flow.yaml  flow_ner.yaml  human_in_loop.yaml  knowledge.yaml  ner_agent.yaml  ner_task.yaml  search_ontology_knowledge.yaml  tasks.yaml
config_template/: config.yaml
docker/: readme.md
docker/individual/grobid-service/: docker-compose.yaml
docker/individual/ollama/: docker-compose.yaml
docker/individual/weaviate-vector-database/: docker-compose.yml
docker/merged/: docker-compose.yml
docker/ollama/: docker-compose.yaml  readme.md
example/NER_EXAMPLE_OPENROUTER/: config.yaml  structsense-cli.ipynb
example/OHBM/: .gitignore  readme.md
example/OHBM/ner/: .env_ohbm_hackathon  config_gpt.yaml  config_ollama.yaml  result.json
example/OHBM/resource_extraction/: .env_ohbm_hackathon  config.yaml  config_ollama.yaml  readme.md  result.json  run.sh
example/bbqs_resource_extraction_example/: config.yaml
example/coding_open-ended_responses/config/: coding_process_agent.yaml  coding_process_task.yaml  config.yaml  config_ollama.yaml
example/coding_open-ended_responses/config/old/: coding_process_agent.yaml  coding_process_task.yaml
example/ner_example/: structsense-cli.ipynb
example/ner_example/ner_config/: embedding.yaml  ner_agent.yaml
example/ner_example_ollama/: structsense-cli.ipynb
example/ner_example_ollama/ner_config/: ner_agent.yaml  ner_task.yaml
example/ner_example_with_human_loop/: structsense-cli.ipynb
example/ner_example_with_human_loop/ner_config/: ner_agent.yaml  ner_task.yaml
example/pdf2reproschema/: .env_rs  readme.md  reproschema_config.yaml
example/pdf2reproschema/evaluation/: result_csv_v_gpt40_mini.json
example/programmatic_access/: porgrammatic_access.ipynb
example/programmatic_access_with_human_loop/: feedback.py  human_loop.ipynb
example/programmatic_access_with_human_loop/config/: ner_agent.yaml  ner_task.yaml
example/programmatic_access_with_human_loop/ner_config/: ner_agent.yaml  ner_task.yaml
scripts/: nn_download.py
src/crew/: agent.py  alignment_agent.py  alignment_task.py  dynamic_agent.py  dynamic_agent_task.py  extractor_agent.py  extractor_task.py  judge_agent.py  judge_task.py  ner_alignment_task.py  ner_extractor_agent.py  ner_extractor_task.py  ner_judge_task.py  task.py
src/ner_framework/: app.py
src/strucsense/: app.py  cli.py
src/structsense/: __init__.py  app.py  cli.py  default_config_sie_ner.py  humanloop.py
src/structsense/default_config/: ner_agent.yaml  ner_task.yaml
src/structsense/default_config_sie/: ner_config.yaml  ner_task.yaml
src/tests/: test_app.py
src/utils/: human_in_loop_handler.py  ontology_knowedge_tool.py  text_chunking.py  types.py  utils.py
